# model3d

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cylinder/: CMakeLists.txt  cylinder.cpp  cylinder.h  cylinder_global.h
simpleOperation/: CMakeLists.txt  form.ui  simpleOperation_global.h  simpleoperation.cpp  simpleoperation.h
